<resources>
    <string name="app_name">Parcial3</string>
    <string name="autor">Autor</string>
    <string name="t_tulo_del_libro">Título del libro</string>
    <string name="editorial">Editorial</string>
    <string name="a_o">Año</string>
    <string name="isbn">ISBN</string>
    <string name="area">Area</string>
    <string name="add">Añadir</string>
    <string name="update">Actualizar</string>
    <string name="enviar">Enviar</string>
    <string-array name="Area">
        <item>Matemáticas</item>
        <item>Español</item>
        <item>Historia</item>
        <item>Inglés</item>
    </string-array>
</resources>
